--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     header.hero {
       width: 100%;
       height: 100vh;
-      background: url('./Img/head_img.jpg') no-repeat center center/cover;
+      background: url('.Img/head_img.jpg') no-repeat center center/cover;
       position: relative;
       display: flex;
       flex-direction: column;
