--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
   border: 2px solid #FF2D2D !important;
 }
 </style>
-<header class="hero" style="position: relative; width: 100%; height: 100vh; background: url('./Img/head_img.jpg') no-repeat center center/cover; display: flex; flex-direction: column; justify-content: flex-end;">
+<header class="hero" style="position: relative; width: 100%; height: 100vh; background: url('.Img/head_img.jpg') no-repeat center center/cover; display: flex; flex-direction: column; justify-content: flex-end;">
 <nav class="navbar" id="navbar" style="
   position: fixed;
   top: 10px;
