--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     header.hero {
       width: 100%;
       height: 100vh;
-      background: url('.Img/head_img.jpg') no-repeat center center/cover;
+      background: url('./Img/head_img.jpg') no-repeat center center/cover;
       position: relative;
       display: flex;
       flex-direction: column;
@@ -421,7 +421,7 @@
   border: 2px solid #FF2D2D !important;
 }
 </style>
-<header class="hero" style="position: relative; width: 100%; height: 100vh; background: url('.Img/head_img.jpg') no-repeat center center/cover; display: flex; flex-direction: column; justify-content: flex-end;">
+<header class="hero" style="position: relative; width: 100%; height: 100vh; background: url('./Img/head_img.jpg') no-repeat center center/cover; display: flex; flex-direction: column; justify-content: flex-end;">
 <nav class="navbar" id="navbar" style="
   position: fixed;
   top: 10px;
@@ -447,7 +447,7 @@
 ">
 <a href="index.html">
 <div class="logo-box">
-<img alt="Logo" src=".Img/logo.png" style="width: 200%; height: 100%; object-fit: contain; border-radius: 8px;"/>
+<img alt="Logo" src="./Img/logo.png" style="width: 200%; height: 100%; object-fit: contain; border-radius: 8px;"/>
 </div>
 </a>
 <div style="display: flex; align-items: center; gap: 40px; margin-left: auto;">
@@ -535,8 +535,8 @@
 <a href="coke-studio.html">
 <div class="portfolio-item interactive-hover" style="background: none; padding: 16px; background-color: #1a1a1a; border-radius: 20px;">
 <div class="portfolio-img-box">
-<img alt="Coke Studio" src=".Img/portfolio-coke.jpg">
-<Img></div>
+<img alt="Coke Studio" src="./Img/portfolio-coke.jpg">
+</img></div>
 <div style="padding: 12px 0 0;">
 <div style="display: flex; align-items: center; gap: 8px;">
 <div style="width: 12px; height: 12px; background: #FF2D2D; border-radius: 2px;"></div>
@@ -553,7 +553,7 @@
 <a href="dyson.html">
 <div class="portfolio-item interactive-hover" style="background: none; padding: 16px; background-color: #1a1a1a; border-radius: 20px;">
 <div class="portfolio-img-box">
-<img alt="Dyson" src=".Img/portfolio-dyson.jpg">
+<img alt="Dyson" src="./Img/portfolio-dyson.jpg">
 </img></div>
 <div style="padding: 12px 0 0;">
 <div style="display: flex; align-items: center; gap: 8px;">
@@ -571,7 +571,7 @@
 <a href="volvo.html">
 <div class="portfolio-item interactive-hover" style="background: none; padding: 16px; background-color: #1a1a1a; border-radius: 20px;">
 <div class="portfolio-img-box">
-<img alt="Volvo" src=".Img/portfolio-volvo.jpg">
+<img alt="Volvo" src="./Img/portfolio-volvo.jpg">
 </img></div>
 <div style="padding: 12px 0 0;">
 <div style="display: flex; align-items: center; gap: 8px;">
@@ -589,7 +589,7 @@
 <a href="maggi-quick-comm.html">
 <div class="portfolio-item interactive-hover" style="background: none; padding: 16px; background-color: #1a1a1a; border-radius: 20px;">
 <div class="portfolio-img-box">
-<img alt="Maggi quick comm" src=".Img/portfolio-maggi.jpg">
+<img alt="Maggi quick comm" src="./Img/portfolio-maggi.jpg">
 </img></div>
 <div style="padding: 12px 0 0;">
 <div style="display: flex; align-items: center; gap: 8px;">
@@ -608,7 +608,7 @@
 <a href="x-brand.html">
 <div class="portfolio-item interactive-hover extra" style="display: none; background: none; padding: 16px; background-color: #1a1a1a; border-radius: 20px;">
 <div class="portfolio-img-box">
-<img alt="X Brand" src=".Img/x.jpg">
+<img alt="X Brand" src="./Img/x.jpg">
 </img></div>
 <div style="padding: 12px 0 0;">
 <div style="display: flex; align-items: center; gap: 8px;">
@@ -626,7 +626,7 @@
 <a href="y-brand.html">
 <div class="portfolio-item interactive-hover extra" style="display: none; background: none; padding: 16px; background-color: #1a1a1a; border-radius: 20px;">
 <div class="portfolio-img-box">
-<img alt="Y Brand" src=".Img/portfolio-britannia.jpg">
+<img alt="Y Brand" src="./Img/portfolio-britannia.jpg">
 </img></div>
 <div style="padding: 12px 0 0;">
 <div style="display: flex; align-items: center; gap: 8px;">
@@ -652,89 +652,89 @@
 <div class="services-wrapper">
 <div class="services">
 <div class="service-tile">
-<img alt="Design Strategy" class="service-icon" src=".Img/Icon/Outline/keypad.png"/>
+<img alt="Design Strategy" class="service-icon" src="./Img/Icon/Outline/keypad.png"/>
           Design Strategy
         </div>
 <div class="service-tile">
-<img alt="Emerging Technologies" class="service-icon" src=".Img/Icon/Outline/code.png"/>
+<img alt="Emerging Technologies" class="service-icon" src="./Img/Icon/Outline/code.png"/>
           Emerging Technologies
         </div>
 <div class="service-tile">
-<img alt="Graphic Design" class="service-icon" src=".Img/Icon/Outline/brush.png"/>
+<img alt="Graphic Design" class="service-icon" src="./Img/Icon/Outline/brush.png"/>
           Graphic Design
         </div>
 <div class="service-tile">
-<img alt="Creative AI" class="service-icon" src=".Img/Icon/Outline/message-square.png"/>
+<img alt="Creative AI" class="service-icon" src="./Img/Icon/Outline/message-square.png"/>
           Creative AI
         </div>
 <div class="service-tile">
-<img alt="UI/UX" class="service-icon" src=".Img/Icon/Outline/browser.png"/>
+<img alt="UI/UX" class="service-icon" src="./Img/Icon/Outline/browser.png"/>
           UI/UX
         </div>
 <div class="service-tile">
-<img alt="Automation" class="service-icon" src=".Img/Icon/Outline/clock.png"/>
+<img alt="Automation" class="service-icon" src="./Img/Icon/Outline/clock.png"/>
           Automation
         </div>
 <div class="service-tile">
-<img alt="3D Design" class="service-icon" src=".Img/Icon/Outline/cube.png"/>
+<img alt="3D Design" class="service-icon" src="./Img/Icon/Outline/cube.png"/>
           3D Design
         </div>
 <!-- Duplicated for seamless scroll loop -->
 <div class="service-tile">
-<img alt="Design Strategy" class="service-icon" src=".Img/Icon/Outline/keypad.png"/>
+<img alt="Design Strategy" class="service-icon" src="./Img/Icon/Outline/keypad.png"/>
           Design Strategy
         </div>
 <div class="service-tile">
-<img alt="Emerging Technologies" class="service-icon" src=".Img/Icon/Outline/code.png"/>
+<img alt="Emerging Technologies" class="service-icon" src="./Img/Icon/Outline/code.png"/>
           Emerging Technologies
         </div>
 <div class="service-tile">
-<img alt="Graphic Design" class="service-icon" src=".Img/Icon/Outline/brush.png"/>
+<img alt="Graphic Design" class="service-icon" src="./Img/Icon/Outline/brush.png"/>
           Graphic Design
         </div>
 <div class="service-tile">
-<img alt="Creative AI" class="service-icon" src=".Img/Icon/Outline/message-square.png"/>
+<img alt="Creative AI" class="service-icon" src="./Img/Icon/Outline/message-square.png"/>
           Creative AI
         </div>
 <div class="service-tile">
-<img alt="UI/UX" class="service-icon" src=".Img/Icon/Outline/browser.png"/>
+<img alt="UI/UX" class="service-icon" src="./Img/Icon/Outline/browser.png"/>
           UI/UX
         </div>
 <div class="service-tile">
-<img alt="Automation" class="service-icon" src=".Img/Icon/Outline/clock.png"/>
+<img alt="Automation" class="service-icon" src="./Img/Icon/Outline/clock.png"/>
           Automation
         </div>
 <div class="service-tile">
-<img alt="3D Design" class="service-icon" src=".Img/Icon/Outline/cube.png"/>
+<img alt="3D Design" class="service-icon" src="./Img/Icon/Outline/cube.png"/>
           3D Design
         </div>
 <!-- Extra duplication for seamless scroll loop -->
 <div class="service-tile">
-<img alt="Design Strategy" class="service-icon" src=".Img/Icon/Outline/keypad.png"/>
+<img alt="Design Strategy" class="service-icon" src="./Img/Icon/Outline/keypad.png"/>
           Design Strategy
         </div>
 <div class="service-tile">
-<img alt="Emerging Technologies" class="service-icon" src=".Img/Icon/Outline/code.png"/>
+<img alt="Emerging Technologies" class="service-icon" src="./Img/Icon/Outline/code.png"/>
           Emerging Technologies
         </div>
 <div class="service-tile">
-<img alt="Graphic Design" class="service-icon" src=".Img/Icon/Outline/brush.png"/>
+<img alt="Graphic Design" class="service-icon" src="./Img/Icon/Outline/brush.png"/>
           Graphic Design
         </div>
 <div class="service-tile">
-<img alt="Creative AI" class="service-icon" src=".Img/Icon/Outline/message-square.png"/>
+<img alt="Creative AI" class="service-icon" src="./Img/Icon/Outline/message-square.png"/>
           Creative AI
         </div>
 <div class="service-tile">
-<img alt="UI/UX" class="service-icon" src=".Img/Icon/Outline/browser.png"/>
+<img alt="UI/UX" class="service-icon" src="./Img/Icon/Outline/browser.png"/>
           UI/UX
         </div>
 <div class="service-tile">
-<img alt="Automation" class="service-icon" src=".Img/Icon/Outline/clock.png"/>
+<img alt="Automation" class="service-icon" src="./Img/Icon/Outline/clock.png"/>
           Automation
         </div>
 <div class="service-tile">
-<img alt="3D Design" class="service-icon" src=".Img/Icon/Outline/cube.png"/>
+<img alt="3D Design" class="service-icon" src="./Img/Icon/Outline/cube.png"/>
           3D Design
         </div>
 </div>
@@ -742,89 +742,89 @@
 <div class="services-wrapper-2">
 <div class="services-2">
 <div class="service-tile">
-<img alt="Design Strategy" class="service-icon" src=".Img/Icon/Outline/keypad.png"/>
+<img alt="Design Strategy" class="service-icon" src="./Img/Icon/Outline/keypad.png"/>
           Design Strategy
         </div>
 <div class="service-tile">
-<img alt="Emerging Technologies" class="service-icon" src=".Img/Icon/Outline/code.png"/>
+<img alt="Emerging Technologies" class="service-icon" src="./Img/Icon/Outline/code.png"/>
           Emerging Technologies
         </div>
 <div class="service-tile">
-<img alt="Graphic Design" class="service-icon" src=".Img/Icon/Outline/brush.png"/>
+<img alt="Graphic Design" class="service-icon" src="./Img/Icon/Outline/brush.png"/>
           Graphic Design
         </div>
 <div class="service-tile">
-<img alt="Creative AI" class="service-icon" src=".Img/Icon/Outline/message-square.png"/>
+<img alt="Creative AI" class="service-icon" src="./Img/Icon/Outline/message-square.png"/>
           Creative AI
         </div>
 <div class="service-tile">
-<img alt="UI/UX" class="service-icon" src=".Img/Icon/Outline/browser.png"/>
+<img alt="UI/UX" class="service-icon" src="./Img/Icon/Outline/browser.png"/>
           UI/UX
         </div>
 <div class="service-tile">
-<img alt="Automation" class="service-icon" src=".Img/Icon/Outline/clock.png"/>
+<img alt="Automation" class="service-icon" src="./Img/Icon/Outline/clock.png"/>
           Automation
         </div>
 <div class="service-tile">
-<img alt="3D Design" class="service-icon" src=".Img/Icon/Outline/cube.png"/>
+<img alt="3D Design" class="service-icon" src="./Img/Icon/Outline/cube.png"/>
           3D Design
         </div>
 <!-- Duplicated for seamless scroll loop -->
 <div class="service-tile">
-<img alt="Design Strategy" class="service-icon" src=".Img/Icon/Outline/keypad.png"/>
+<img alt="Design Strategy" class="service-icon" src="./Img/Icon/Outline/keypad.png"/>
           Design Strategy
         </div>
 <div class="service-tile">
-<img alt="Emerging Technologies" class="service-icon" src=".Img/Icon/Outline/code.png"/>
+<img alt="Emerging Technologies" class="service-icon" src="./Img/Icon/Outline/code.png"/>
           Emerging Technologies
         </div>
 <div class="service-tile">
-<img alt="Graphic Design" class="service-icon" src=".Img/Icon/Outline/brush.png"/>
+<img alt="Graphic Design" class="service-icon" src="./Img/Icon/Outline/brush.png"/>
           Graphic Design
         </div>
 <div class="service-tile">
-<img alt="Creative AI" class="service-icon" src=".Img/Icon/Outline/message-square.png"/>
+<img alt="Creative AI" class="service-icon" src="./Img/Icon/Outline/message-square.png"/>
           Creative AI
         </div>
 <div class="service-tile">
-<img alt="UI/UX" class="service-icon" src=".Img/Icon/Outline/browser.png"/>
+<img alt="UI/UX" class="service-icon" src="./Img/Icon/Outline/browser.png"/>
           UI/UX
         </div>
 <div class="service-tile">
-<img alt="Automation" class="service-icon" src=".Img/Icon/Outline/clock.png"/>
+<img alt="Automation" class="service-icon" src="./Img/Icon/Outline/clock.png"/>
           Automation
         </div>
 <div class="service-tile">
-<img alt="3D Design" class="service-icon" src=".Img/Icon/Outline/cube.png"/>
+<img alt="3D Design" class="service-icon" src="./Img/Icon/Outline/cube.png"/>
           3D Design
         </div>
 <!-- Extra duplication for seamless scroll loop -->
 <div class="service-tile">
-<img alt="Design Strategy" class="service-icon" src=".Img/Icon/Outline/keypad.png"/>
+<img alt="Design Strategy" class="service-icon" src="./Img/Icon/Outline/keypad.png"/>
           Design Strategy
         </div>
 <div class="service-tile">
-<img alt="Emerging Technologies" class="service-icon" src=".Img/Icon/Outline/code.png"/>
+<img alt="Emerging Technologies" class="service-icon" src="./Img/Icon/Outline/code.png"/>
           Emerging Technologies
         </div>
 <div class="service-tile">
-<img alt="Graphic Design" class="service-icon" src=".Img/Icon/Outline/brush.png"/>
+<img alt="Graphic Design" class="service-icon" src="./Img/Icon/Outline/brush.png"/>
           Graphic Design
         </div>
 <div class="service-tile">
-<img alt="Creative AI" class="service-icon" src=".Img/Icon/Outline/message-square.png"/>
+<img alt="Creative AI" class="service-icon" src="./Img/Icon/Outline/message-square.png"/>
           Creative AI
         </div>
 <div class="service-tile">
-<img alt="UI/UX" class="service-icon" src=".Img/Icon/Outline/browser.png"/>
+<img alt="UI/UX" class="service-icon" src="./Img/Icon/Outline/browser.png"/>
           UI/UX
         </div>
 <div class="service-tile">
-<img alt="Automation" class="service-icon" src=".Img/Icon/Outline/clock.png"/>
+<img alt="Automation" class="service-icon" src="./Img/Icon/Outline/clock.png"/>
           Automation
         </div>
 <div class="service-tile">
-<img alt="3D Design" class="service-icon" src=".Img/Icon/Outline/cube.png"/>
+<img alt="3D Design" class="service-icon" src="./Img/Icon/Outline/cube.png"/>
           3D Design
         </div>
 </div>
