--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     header.hero {
       width: 100%;
       height: 100vh;
-      background: url('./Img/head_img.jpg') no-repeat center center/cover;
+      background: url('.Img/head_img.jpg') no-repeat center center/cover;
       position: relative;
       display: flex;
       flex-direction: column;
@@ -421,7 +421,7 @@
   border: 2px solid #FF2D2D !important;
 }
 </style>
-<header class="hero" style="position: relative; width: 100%; height: 100vh; background: url('./Img/head_img.jpg') no-repeat center center/cover; display: flex; flex-direction: column; justify-content: flex-end;">
+<header class="hero" style="position: relative; width: 100%; height: 100vh; background: url('.Img/head_img.jpg') no-repeat center center/cover; display: flex; flex-direction: column; justify-content: flex-end;">
 <nav class="navbar" id="navbar" style="
   position: fixed;
   top: 10px;
@@ -447,7 +447,7 @@
 ">
 <a href="index.html">
 <div class="logo-box">
-<img alt="Logo" src="./Img/logo.png" style="width: 200%; height: 100%; object-fit: contain; border-radius: 8px;"/>
+<img alt="Logo" src=".Img/logo.png" style="width: 200%; height: 100%; object-fit: contain; border-radius: 8px;"/>
 </div>
 </a>
 <div style="display: flex; align-items: center; gap: 40px; margin-left: auto;">
