--- a/index.html
+++ b/index.html
@@ -508,18 +508,18 @@
 <p class="section-title">Brands I’ve worked with</p>
 <div class="brands">
 <div class="brands-track">
-<div class="brand-logo"><img alt="Brand 1" src=".Img/brand1.png"/></div>
-<div class="brand-logo"><img alt="Brand 2" src=".Img/brand2.png"/></div>
-<div class="brand-logo"><img alt="Brand 3" src=".Img/brand3.png"/></div>
-<div class="brand-logo"><img alt="Brand 4" src=".Img/brand4.png"/></div>
-<div class="brand-logo"><img alt="Brand 5" src=".Img/brand5.png"/></div>
-<div class="brand-logo"><img alt="Brand 6" src=".Img/brand6.png"/></div>
-<div class="brand-logo"><img alt="Brand 7" src=".Img/brand7.png"/></div>
-<div class="brand-logo"><img alt="Brand 8" src=".Img/brand8.png"/></div>
-<div class="brand-logo"><img alt="Brand 9" src=".Img/brand9.png"/></div>
-<div class="brand-logo"><img alt="Brand 10" src=".Img/brand10.png"/></div>
-<div class="brand-logo"><img alt="Brand 11" src=".Img/brand11.png"/></div>
-<div class="brand-logo"><img alt="Brand 12" src=".Img/brand12.png"/></div>
+<div class="brand-logo"><img alt="Brand 1" src="Img/brand1.png"/></div>
+<div class="brand-logo"><img alt="Brand 2" src="Img/brand2.png"/></div>
+<div class="brand-logo"><img alt="Brand 3" src="Img/brand3.png"/></div>
+<div class="brand-logo"><img alt="Brand 4" src="Img/brand4.png"/></div>
+<div class="brand-logo"><img alt="Brand 5" src="Img/brand5.png"/></div>
+<div class="brand-logo"><img alt="Brand 6" src="Img/brand6.png"/></div>
+<div class="brand-logo"><img alt="Brand 7" src="Img/brand7.png"/></div>
+<div class="brand-logo"><img alt="Brand 8" src="Img/brand8.png"/></div>
+<div class="brand-logo"><img alt="Brand 9" src="Img/brand9.png"/></div>
+<div class="brand-logo"><img alt="Brand 10" src="Img/brand10.png"/></div>
+<div class="brand-logo"><img alt="Brand 11" src="Img/brand11.png"/></div>
+<div class="brand-logo"><img alt="Brand 12" src="Img/brand12.png"/></div>
 </div>
 </div>
 </section>
@@ -535,7 +535,7 @@
 <a href="coke-studio.html">
 <div class="portfolio-item interactive-hover" style="background: none; padding: 16px; background-color: #1a1a1a; border-radius: 20px;">
 <div class="portfolio-img-box">
-<img alt="Coke Studio" src="./Img/portfolio-coke.jpg">
+<img alt="Coke Studio" src="Img/portfolio-coke.jpg">
 </img></div>
 <div style="padding: 12px 0 0;">
 <div style="display: flex; align-items: center; gap: 8px;">
@@ -553,7 +553,7 @@
 <a href="dyson.html">
 <div class="portfolio-item interactive-hover" style="background: none; padding: 16px; background-color: #1a1a1a; border-radius: 20px;">
 <div class="portfolio-img-box">
-<img alt="Dyson" src="./Img/portfolio-dyson.jpg">
+<img alt="Dyson" src="Img/portfolio-dyson.jpg">
 </img></div>
 <div style="padding: 12px 0 0;">
 <div style="display: flex; align-items: center; gap: 8px;">
@@ -571,7 +571,7 @@
 <a href="volvo.html">
 <div class="portfolio-item interactive-hover" style="background: none; padding: 16px; background-color: #1a1a1a; border-radius: 20px;">
 <div class="portfolio-img-box">
-<img alt="Volvo" src="./Img/portfolio-volvo.jpg">
+<img alt="Volvo" src="Img/portfolio-volvo.jpg">
 </img></div>
 <div style="padding: 12px 0 0;">
 <div style="display: flex; align-items: center; gap: 8px;">
@@ -589,7 +589,7 @@
 <a href="maggi-quick-comm.html">
 <div class="portfolio-item interactive-hover" style="background: none; padding: 16px; background-color: #1a1a1a; border-radius: 20px;">
 <div class="portfolio-img-box">
-<img alt="Maggi quick comm" src="./Img/portfolio-maggi.jpg">
+<img alt="Maggi quick comm" src="Img/portfolio-maggi.jpg">
 </img></div>
 <div style="padding: 12px 0 0;">
 <div style="display: flex; align-items: center; gap: 8px;">
@@ -608,7 +608,7 @@
 <a href="x-brand.html">
 <div class="portfolio-item interactive-hover extra" style="display: none; background: none; padding: 16px; background-color: #1a1a1a; border-radius: 20px;">
 <div class="portfolio-img-box">
-<img alt="X Brand" src="./Img/x.jpg">
+<img alt="X Brand" src="Img/x.jpg">
 </img></div>
 <div style="padding: 12px 0 0;">
 <div style="display: flex; align-items: center; gap: 8px;">
@@ -626,7 +626,7 @@
 <a href="y-brand.html">
 <div class="portfolio-item interactive-hover extra" style="display: none; background: none; padding: 16px; background-color: #1a1a1a; border-radius: 20px;">
 <div class="portfolio-img-box">
-<img alt="Y Brand" src="./Img/portfolio-britannia.jpg">
+<img alt="Y Brand" src="Img/portfolio-britannia.jpg">
 </img></div>
 <div style="padding: 12px 0 0;">
 <div style="display: flex; align-items: center; gap: 8px;">
@@ -652,89 +652,89 @@
 <div class="services-wrapper">
 <div class="services">
 <div class="service-tile">
-<img alt="Design Strategy" class="service-icon" src="./Img/Icon/Outline/keypad.png"/>
+<img alt="Design Strategy" class="service-icon" src="Img/Icon/Outline/keypad.png"/>
           Design Strategy
         </div>
 <div class="service-tile">
-<img alt="Emerging Technologies" class="service-icon" src="./Img/Icon/Outline/code.png"/>
+<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/Outline/code.png"/>
           Emerging Technologies
         </div>
 <div class="service-tile">
-<img alt="Graphic Design" class="service-icon" src="./Img/Icon/Outline/brush.png"/>
+<img alt="Graphic Design" class="service-icon" src="Img/Icon/Outline/brush.png"/>
           Graphic Design
         </div>
 <div class="service-tile">
-<img alt="Creative AI" class="service-icon" src="./Img/Icon/Outline/message-square.png"/>
+<img alt="Creative AI" class="service-icon" src="Img/Icon/Outline/message-square.png"/>
           Creative AI
         </div>
 <div class="service-tile">
-<img alt="UI/UX" class="service-icon" src="./Img/Icon/Outline/browser.png"/>
+<img alt="UI/UX" class="service-icon" src="Img/Icon/Outline/browser.png"/>
           UI/UX
         </div>
 <div class="service-tile">
-<img alt="Automation" class="service-icon" src="./Img/Icon/Outline/clock.png"/>
+<img alt="Automation" class="service-icon" src="Img/Icon/Outline/clock.png"/>
           Automation
         </div>
 <div class="service-tile">
-<img alt="3D Design" class="service-icon" src="./Img/Icon/Outline/cube.png"/>
+<img alt="3D Design" class="service-icon" src="Img/Icon/Outline/cube.png"/>
           3D Design
         </div>
 <!-- Duplicated for seamless scroll loop -->
 <div class="service-tile">
-<img alt="Design Strategy" class="service-icon" src="./Img/Icon/Outline/keypad.png"/>
+<img alt="Design Strategy" class="service-icon" src="Img/Icon/Outline/keypad.png"/>
           Design Strategy
         </div>
 <div class="service-tile">
-<img alt="Emerging Technologies" class="service-icon" src="./Img/Icon/Outline/code.png"/>
+<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/Outline/code.png"/>
           Emerging Technologies
         </div>
 <div class="service-tile">
-<img alt="Graphic Design" class="service-icon" src="./Img/Icon/Outline/brush.png"/>
+<img alt="Graphic Design" class="service-icon" src="Img/Icon/Outline/brush.png"/>
           Graphic Design
         </div>
 <div class="service-tile">
-<img alt="Creative AI" class="service-icon" src="./Img/Icon/Outline/message-square.png"/>
+<img alt="Creative AI" class="service-icon" src="Img/Icon/Outline/message-square.png"/>
           Creative AI
         </div>
 <div class="service-tile">
-<img alt="UI/UX" class="service-icon" src="./Img/Icon/Outline/browser.png"/>
+<img alt="UI/UX" class="service-icon" src="Img/Icon/Outline/browser.png"/>
           UI/UX
         </div>
 <div class="service-tile">
-<img alt="Automation" class="service-icon" src="./Img/Icon/Outline/clock.png"/>
+<img alt="Automation" class="service-icon" src="Img/Icon/Outline/clock.png"/>
           Automation
         </div>
 <div class="service-tile">
-<img alt="3D Design" class="service-icon" src="./Img/Icon/Outline/cube.png"/>
+<img alt="3D Design" class="service-icon" src="Img/Icon/Outline/cube.png"/>
           3D Design
         </div>
 <!-- Extra duplication for seamless scroll loop -->
 <div class="service-tile">
-<img alt="Design Strategy" class="service-icon" src="./Img/Icon/Outline/keypad.png"/>
+<img alt="Design Strategy" class="service-icon" src="Img/Icon/Outline/keypad.png"/>
           Design Strategy
         </div>
 <div class="service-tile">
-<img alt="Emerging Technologies" class="service-icon" src="./Img/Icon/Outline/code.png"/>
+<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/Outline/code.png"/>
           Emerging Technologies
         </div>
 <div class="service-tile">
-<img alt="Graphic Design" class="service-icon" src="./Img/Icon/Outline/brush.png"/>
+<img alt="Graphic Design" class="service-icon" src="Img/Icon/Outline/brush.png"/>
           Graphic Design
         </div>
 <div class="service-tile">
-<img alt="Creative AI" class="service-icon" src="./Img/Icon/Outline/message-square.png"/>
+<img alt="Creative AI" class="service-icon" src="Img/Icon/Outline/message-square.png"/>
           Creative AI
         </div>
 <div class="service-tile">
-<img alt="UI/UX" class="service-icon" src="./Img/Icon/Outline/browser.png"/>
+<img alt="UI/UX" class="service-icon" src="Img/Icon/Outline/browser.png"/>
           UI/UX
         </div>
 <div class="service-tile">
-<img alt="Automation" class="service-icon" src="./Img/Icon/Outline/clock.png"/>
+<img alt="Automation" class="service-icon" src="Img/Icon/Outline/clock.png"/>
           Automation
         </div>
 <div class="service-tile">
-<img alt="3D Design" class="service-icon" src="./Img/Icon/Outline/cube.png"/>
+<img alt="3D Design" class="service-icon" src="Img/Icon/Outline/cube.png"/>
           3D Design
         </div>
 </div>
@@ -742,89 +742,89 @@
 <div class="services-wrapper-2">
 <div class="services-2">
 <div class="service-tile">
-<img alt="Design Strategy" class="service-icon" src="./Img/Icon/Outline/keypad.png"/>
+<img alt="Design Strategy" class="service-icon" src="Img/Icon/Outline/keypad.png"/>
           Design Strategy
         </div>
 <div class="service-tile">
-<img alt="Emerging Technologies" class="service-icon" src="./Img/Icon/Outline/code.png"/>
+<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/Outline/code.png"/>
           Emerging Technologies
         </div>
 <div class="service-tile">
-<img alt="Graphic Design" class="service-icon" src="./Img/Icon/Outline/brush.png"/>
+<img alt="Graphic Design" class="service-icon" src="Img/Icon/Outline/brush.png"/>
           Graphic Design
         </div>
 <div class="service-tile">
-<img alt="Creative AI" class="service-icon" src="./Img/Icon/Outline/message-square.png"/>
+<img alt="Creative AI" class="service-icon" src="Img/Icon/Outline/message-square.png"/>
           Creative AI
         </div>
 <div class="service-tile">
-<img alt="UI/UX" class="service-icon" src="./Img/Icon/Outline/browser.png"/>
+<img alt="UI/UX" class="service-icon" src="Img/Icon/Outline/browser.png"/>
           UI/UX
         </div>
 <div class="service-tile">
-<img alt="Automation" class="service-icon" src="./Img/Icon/Outline/clock.png"/>
+<img alt="Automation" class="service-icon" src="Img/Icon/Outline/clock.png"/>
           Automation
         </div>
 <div class="service-tile">
-<img alt="3D Design" class="service-icon" src="./Img/Icon/Outline/cube.png"/>
+<img alt="3D Design" class="service-icon" src="Img/Icon/Outline/cube.png"/>
           3D Design
         </div>
 <!-- Duplicated for seamless scroll loop -->
 <div class="service-tile">
-<img alt="Design Strategy" class="service-icon" src="./Img/Icon/Outline/keypad.png"/>
+<img alt="Design Strategy" class="service-icon" src="Img/Icon/Outline/keypad.png"/>
           Design Strategy
         </div>
 <div class="service-tile">
-<img alt="Emerging Technologies" class="service-icon" src="./Img/Icon/Outline/code.png"/>
+<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/Outline/code.png"/>
           Emerging Technologies
         </div>
 <div class="service-tile">
-<img alt="Graphic Design" class="service-icon" src="./Img/Icon/Outline/brush.png"/>
+<img alt="Graphic Design" class="service-icon" src="Img/Icon/Outline/brush.png"/>
           Graphic Design
         </div>
 <div class="service-tile">
-<img alt="Creative AI" class="service-icon" src="./Img/Icon/Outline/message-square.png"/>
+<img alt="Creative AI" class="service-icon" src="Img/Icon/Outline/message-square.png"/>
           Creative AI
         </div>
 <div class="service-tile">
-<img alt="UI/UX" class="service-icon" src="./Img/Icon/Outline/browser.png"/>
+<img alt="UI/UX" class="service-icon" src="Img/Icon/Outline/browser.png"/>
           UI/UX
         </div>
 <div class="service-tile">
-<img alt="Automation" class="service-icon" src="./Img/Icon/Outline/clock.png"/>
+<img alt="Automation" class="service-icon" src="Img/Icon/Outline/clock.png"/>
           Automation
         </div>
 <div class="service-tile">
-<img alt="3D Design" class="service-icon" src="./Img/Icon/Outline/cube.png"/>
+<img alt="3D Design" class="service-icon" src="Img/Icon/Outline/cube.png"/>
           3D Design
         </div>
 <!-- Extra duplication for seamless scroll loop -->
 <div class="service-tile">
-<img alt="Design Strategy" class="service-icon" src="./Img/Icon/Outline/keypad.png"/>
+<img alt="Design Strategy" class="service-icon" src="Img/Icon/Outline/keypad.png"/>
           Design Strategy
         </div>
 <div class="service-tile">
-<img alt="Emerging Technologies" class="service-icon" src="./Img/Icon/Outline/code.png"/>
+<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/Outline/code.png"/>
           Emerging Technologies
         </div>
 <div class="service-tile">
-<img alt="Graphic Design" class="service-icon" src="./Img/Icon/Outline/brush.png"/>
+<img alt="Graphic Design" class="service-icon" src="Img/Icon/Outline/brush.png"/>
           Graphic Design
         </div>
 <div class="service-tile">
-<img alt="Creative AI" class="service-icon" src="./Img/Icon/Outline/message-square.png"/>
+<img alt="Creative AI" class="service-icon" src="Img/Icon/Outline/message-square.png"/>
           Creative AI
         </div>
 <div class="service-tile">
-<img alt="UI/UX" class="service-icon" src="./Img/Icon/Outline/browser.png"/>
+<img alt="UI/UX" class="service-icon" src="Img/Icon/Outline/browser.png"/>
           UI/UX
         </div>
 <div class="service-tile">
-<img alt="Automation" class="service-icon" src="./Img/Icon/Outline/clock.png"/>
+<img alt="Automation" class="service-icon" src="Img/Icon/Outline/clock.png"/>
           Automation
         </div>
 <div class="service-tile">
-<img alt="3D Design" class="service-icon" src="./Img/Icon/Outline/cube.png"/>
+<img alt="3D Design" class="service-icon" src="Img/Icon/Outline/cube.png"/>
           3D Design
         </div>
 </div>
