--- a/index.html
+++ b/index.html
@@ -641,6 +641,42 @@
 </div>
 </div>
 </a>
+<a href="stay.html">
+<div class="portfolio-item interactive-hover extra" style="display: none; background: none; padding: 16px; background-color: #1a1a1a; border-radius: 20px;">
+<div class="portfolio-img-box">
+<img alt="Y Brand" src="Img/portfolio-stayfree.png">
+</img></div>
+<div style="padding: 12px 0 0;">
+<div style="display: flex; align-items: center; gap: 8px;">
+<div style="width: 12px; height: 12px; background: #FF2D2D; border-radius: 2px;"></div>
+<span style="font-weight: 600;">Stayfree</span>
+</div>
+<div style="font-size: 14px; color: #888; margin-top: 4px;">2025</div>
+<div style="display: flex; justify-content: flex-end; gap: 8px; margin-top: 8px;">
+<span class="service-tag">E-comm</span>
+<span class="service-tag">A+</span>
+</div>
+</div>
+</div>
+</a>
+<a href="FnT.html">
+<div class="portfolio-item interactive-hover extra" style="display: none; background: none; padding: 16px; background-color: #1a1a1a; border-radius: 20px;">
+<div class="portfolio-img-box">
+<img alt="Y Brand" src="Img/portfolio-landing.png">
+</img></div>
+<div style="padding: 12px 0 0;">
+<div style="display: flex; align-items: center; gap: 8px;">
+<div style="width: 12px; height: 12px; background: #FF2D2D; border-radius: 2px;"></div>
+<span style="font-weight: 600;">Landing Page</span>
+</div>
+<div style="font-size: 14px; color: #888; margin-top: 4px;">2022</div>
+<div style="display: flex; justify-content: flex-end; gap: 8px; margin-top: 8px;">
+<span class="service-tag">UI/UX</span>
+<span class="service-tag">Landing Page</span>
+</div>
+</div>
+</div>
+</a>
 </div>
 <div class="explore-btn" style="text-align: center; margin-top: 80px; margin-bottom: 100px;">
 <a class="btn-primary interactive-hover" href="javascript:void(0)" id="explore-more-btn" style="background: #FF2D2D; padding: 14px 28px; font-weight: 600; border-radius: 100px;">Explore more</a>
@@ -652,89 +688,89 @@
 <div class="services-wrapper">
 <div class="services">
 <div class="service-tile">
-<img alt="Design Strategy" class="service-icon" src="Img/Icon/keypad.png"/>
+<img alt="Design Strategy" class="service-icon" src="Img/Icon/Outline/keypad.png"/>
           Design Strategy
         </div>
 <div class="service-tile">
-<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/code.png"/>
+<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/Outline/code.png"/>
           Emerging Technologies
         </div>
 <div class="service-tile">
-<img alt="Graphic Design" class="service-icon" src="Img/Icon/brush.png"/>
+<img alt="Graphic Design" class="service-icon" src="Img/Icon/Outline/brush.png"/>
           Graphic Design
         </div>
 <div class="service-tile">
-<img alt="Creative AI" class="service-icon" src="Img/Icon/message-square.png"/>
+<img alt="Creative AI" class="service-icon" src="Img/Icon/Outline/message-square.png"/>
           Creative AI
         </div>
 <div class="service-tile">
-<img alt="UI/UX" class="service-icon" src="Img/Icon/browser.png"/>
+<img alt="UI/UX" class="service-icon" src="Img/Icon/Outline/browser.png"/>
           UI/UX
         </div>
 <div class="service-tile">
-<img alt="Automation" class="service-icon" src="Img/Icon/clock.png"/>
+<img alt="Automation" class="service-icon" src="Img/Icon/Outline/clock.png"/>
           Automation
         </div>
 <div class="service-tile">
-<img alt="3D Design" class="service-icon" src="Img/Icon/cube.png"/>
+<img alt="3D Design" class="service-icon" src="Img/Icon/Outline/cube.png"/>
           3D Design
         </div>
 <!-- Duplicated for seamless scroll loop -->
 <div class="service-tile">
-<img alt="Design Strategy" class="service-icon" src="Img/Icon/keypad.png"/>
+<img alt="Design Strategy" class="service-icon" src="Img/Icon/Outline/keypad.png"/>
           Design Strategy
         </div>
 <div class="service-tile">
-<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/code.png"/>
+<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/Outline/code.png"/>
           Emerging Technologies
         </div>
 <div class="service-tile">
-<img alt="Graphic Design" class="service-icon" src="Img/Icon/brush.png"/>
+<img alt="Graphic Design" class="service-icon" src="Img/Icon/Outline/brush.png"/>
           Graphic Design
         </div>
 <div class="service-tile">
-<img alt="Creative AI" class="service-icon" src="Img/Icon/message-square.png"/>
+<img alt="Creative AI" class="service-icon" src="Img/Icon/Outline/message-square.png"/>
           Creative AI
         </div>
 <div class="service-tile">
-<img alt="UI/UX" class="service-icon" src="Img/Icon/browser.png"/>
+<img alt="UI/UX" class="service-icon" src="Img/Icon/Outline/browser.png"/>
           UI/UX
         </div>
 <div class="service-tile">
-<img alt="Automation" class="service-icon" src="Img/Icon/clock.png"/>
+<img alt="Automation" class="service-icon" src="Img/Icon/Outline/clock.png"/>
           Automation
         </div>
 <div class="service-tile">
-<img alt="3D Design" class="service-icon" src="Img/Icon/cube.png"/>
+<img alt="3D Design" class="service-icon" src="Img/Icon/Outline/cube.png"/>
           3D Design
         </div>
 <!-- Extra duplication for seamless scroll loop -->
 <div class="service-tile">
-<img alt="Design Strategy" class="service-icon" src="Img/Icon/keypad.png"/>
+<img alt="Design Strategy" class="service-icon" src="Img/Icon/Outline/keypad.png"/>
           Design Strategy
         </div>
 <div class="service-tile">
-<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/code.png"/>
+<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/Outline/code.png"/>
           Emerging Technologies
         </div>
 <div class="service-tile">
-<img alt="Graphic Design" class="service-icon" src="Img/Icon/brush.png"/>
+<img alt="Graphic Design" class="service-icon" src="Img/Icon/Outline/brush.png"/>
           Graphic Design
         </div>
 <div class="service-tile">
-<img alt="Creative AI" class="service-icon" src="Img/Icon/message-square.png"/>
+<img alt="Creative AI" class="service-icon" src="Img/Icon/Outline/message-square.png"/>
           Creative AI
         </div>
 <div class="service-tile">
-<img alt="UI/UX" class="service-icon" src="Img/Icon/browser.png"/>
+<img alt="UI/UX" class="service-icon" src="Img/Icon/Outline/browser.png"/>
           UI/UX
         </div>
 <div class="service-tile">
-<img alt="Automation" class="service-icon" src="Img/Icon/clock.png"/>
+<img alt="Automation" class="service-icon" src="Img/Icon/Outline/clock.png"/>
           Automation
         </div>
 <div class="service-tile">
-<img alt="3D Design" class="service-icon" src="Img/Icon/cube.png"/>
+<img alt="3D Design" class="service-icon" src="Img/Icon/Outline/cube.png"/>
           3D Design
         </div>
 </div>
@@ -742,89 +778,89 @@
 <div class="services-wrapper-2">
 <div class="services-2">
 <div class="service-tile">
-<img alt="Design Strategy" class="service-icon" src="Img/Icon/keypad.png"/>
+<img alt="Design Strategy" class="service-icon" src="Img/Icon/Outline/keypad.png"/>
           Design Strategy
         </div>
 <div class="service-tile">
-<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/code.png"/>
+<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/Outline/code.png"/>
           Emerging Technologies
         </div>
 <div class="service-tile">
-<img alt="Graphic Design" class="service-icon" src="Img/Icon/brush.png"/>
+<img alt="Graphic Design" class="service-icon" src="Img/Icon/Outline/brush.png"/>
           Graphic Design
         </div>
 <div class="service-tile">
-<img alt="Creative AI" class="service-icon" src="Img/Icon/message-square.png"/>
+<img alt="Creative AI" class="service-icon" src="Img/Icon/Outline/message-square.png"/>
           Creative AI
         </div>
 <div class="service-tile">
-<img alt="UI/UX" class="service-icon" src="Img/Icon/browser.png"/>
+<img alt="UI/UX" class="service-icon" src="Img/Icon/Outline/browser.png"/>
           UI/UX
         </div>
 <div class="service-tile">
-<img alt="Automation" class="service-icon" src="Img/Icon/clock.png"/>
+<img alt="Automation" class="service-icon" src="Img/Icon/Outline/clock.png"/>
           Automation
         </div>
 <div class="service-tile">
-<img alt="3D Design" class="service-icon" src="Img/Icon/cube.png"/>
+<img alt="3D Design" class="service-icon" src="Img/Icon/Outline/cube.png"/>
           3D Design
         </div>
 <!-- Duplicated for seamless scroll loop -->
 <div class="service-tile">
-<img alt="Design Strategy" class="service-icon" src="Img/Icon/keypad.png"/>
+<img alt="Design Strategy" class="service-icon" src="Img/Icon/Outline/keypad.png"/>
           Design Strategy
         </div>
 <div class="service-tile">
-<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/code.png"/>
+<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/Outline/code.png"/>
           Emerging Technologies
         </div>
 <div class="service-tile">
-<img alt="Graphic Design" class="service-icon" src="Img/Icon/brush.png"/>
+<img alt="Graphic Design" class="service-icon" src="Img/Icon/Outline/brush.png"/>
           Graphic Design
         </div>
 <div class="service-tile">
-<img alt="Creative AI" class="service-icon" src="Img/Icon/message-square.png"/>
+<img alt="Creative AI" class="service-icon" src="Img/Icon/Outline/message-square.png"/>
           Creative AI
         </div>
 <div class="service-tile">
-<img alt="UI/UX" class="service-icon" src="Img/Icon/browser.png"/>
+<img alt="UI/UX" class="service-icon" src="Img/Icon/Outline/browser.png"/>
           UI/UX
         </div>
 <div class="service-tile">
-<img alt="Automation" class="service-icon" src="Img/Icon/clock.png"/>
+<img alt="Automation" class="service-icon" src="Img/Icon/Outline/clock.png"/>
           Automation
         </div>
 <div class="service-tile">
-<img alt="3D Design" class="service-icon" src="Img/Icon/cube.png"/>
+<img alt="3D Design" class="service-icon" src="Img/Icon/Outline/cube.png"/>
           3D Design
         </div>
 <!-- Extra duplication for seamless scroll loop -->
 <div class="service-tile">
-<img alt="Design Strategy" class="service-icon" src="Img/Icon/keypad.png"/>
+<img alt="Design Strategy" class="service-icon" src="Img/Icon/Outline/keypad.png"/>
           Design Strategy
         </div>
 <div class="service-tile">
-<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/code.png"/>
+<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/Outline/code.png"/>
           Emerging Technologies
         </div>
 <div class="service-tile">
-<img alt="Graphic Design" class="service-icon" src="Img/Icon/brush.png"/>
+<img alt="Graphic Design" class="service-icon" src="Img/Icon/Outline/brush.png"/>
           Graphic Design
         </div>
 <div class="service-tile">
-<img alt="Creative AI" class="service-icon" src="Img/Icon/message-square.png"/>
+<img alt="Creative AI" class="service-icon" src="Img/Icon/Outline/message-square.png"/>
           Creative AI
         </div>
 <div class="service-tile">
-<img alt="UI/UX" class="service-icon" src="Img/Icon/browser.png"/>
+<img alt="UI/UX" class="service-icon" src="Img/Icon/Outline/browser.png"/>
           UI/UX
         </div>
 <div class="service-tile">
-<img alt="Automation" class="service-icon" src="Img/Icon/clock.png"/>
+<img alt="Automation" class="service-icon" src="Img/Icon/Outline/clock.png"/>
           Automation
         </div>
 <div class="service-tile">
-<img alt="3D Design" class="service-icon" src="Img/Icon/cube.png"/>
+<img alt="3D Design" class="service-icon" src="Img/Icon/Outline/cube.png"/>
           3D Design
         </div>
 </div>
