--- a/index.html
+++ b/index.html
@@ -688,89 +688,89 @@
 <div class="services-wrapper">
 <div class="services">
 <div class="service-tile">
-<img alt="Design Strategy" class="service-icon" src="Img/Icon/Outline/keypad.png"/>
+<img alt="Design Strategy" class="service-icon" src="Img/Icon/keypad.png"/>
           Design Strategy
         </div>
 <div class="service-tile">
-<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/Outline/code.png"/>
+<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/code.png"/>
           Emerging Technologies
         </div>
 <div class="service-tile">
-<img alt="Graphic Design" class="service-icon" src="Img/Icon/Outline/brush.png"/>
+<img alt="Graphic Design" class="service-icon" src="Img/Icon/brush.png"/>
           Graphic Design
         </div>
 <div class="service-tile">
-<img alt="Creative AI" class="service-icon" src="Img/Icon/Outline/message-square.png"/>
+<img alt="Creative AI" class="service-icon" src="Img/Icon/message-square.png"/>
           Creative AI
         </div>
 <div class="service-tile">
-<img alt="UI/UX" class="service-icon" src="Img/Icon/Outline/browser.png"/>
+<img alt="UI/UX" class="service-icon" src="Img/Icon/browser.png"/>
           UI/UX
         </div>
 <div class="service-tile">
-<img alt="Automation" class="service-icon" src="Img/Icon/Outline/clock.png"/>
+<img alt="Automation" class="service-icon" src="Img/Icon/clock.png"/>
           Automation
         </div>
 <div class="service-tile">
-<img alt="3D Design" class="service-icon" src="Img/Icon/Outline/cube.png"/>
+<img alt="3D Design" class="service-icon" src="Img/Icon/cube.png"/>
           3D Design
         </div>
 <!-- Duplicated for seamless scroll loop -->
 <div class="service-tile">
-<img alt="Design Strategy" class="service-icon" src="Img/Icon/Outline/keypad.png"/>
+<img alt="Design Strategy" class="service-icon" src="Img/Icon/keypad.png"/>
           Design Strategy
         </div>
 <div class="service-tile">
-<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/Outline/code.png"/>
+<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/code.png"/>
           Emerging Technologies
         </div>
 <div class="service-tile">
-<img alt="Graphic Design" class="service-icon" src="Img/Icon/Outline/brush.png"/>
+<img alt="Graphic Design" class="service-icon" src="Img/Icon/brush.png"/>
           Graphic Design
         </div>
 <div class="service-tile">
-<img alt="Creative AI" class="service-icon" src="Img/Icon/Outline/message-square.png"/>
+<img alt="Creative AI" class="service-icon" src="Img/Icon/message-square.png"/>
           Creative AI
         </div>
 <div class="service-tile">
-<img alt="UI/UX" class="service-icon" src="Img/Icon/Outline/browser.png"/>
+<img alt="UI/UX" class="service-icon" src="Img/Icon/browser.png"/>
           UI/UX
         </div>
 <div class="service-tile">
-<img alt="Automation" class="service-icon" src="Img/Icon/Outline/clock.png"/>
+<img alt="Automation" class="service-icon" src="Img/Icon/clock.png"/>
           Automation
         </div>
 <div class="service-tile">
-<img alt="3D Design" class="service-icon" src="Img/Icon/Outline/cube.png"/>
+<img alt="3D Design" class="service-icon" src="Img/Icon/cube.png"/>
           3D Design
         </div>
 <!-- Extra duplication for seamless scroll loop -->
 <div class="service-tile">
-<img alt="Design Strategy" class="service-icon" src="Img/Icon/Outline/keypad.png"/>
+<img alt="Design Strategy" class="service-icon" src="Img/Icon/keypad.png"/>
           Design Strategy
         </div>
 <div class="service-tile">
-<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/Outline/code.png"/>
+<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/code.png"/>
           Emerging Technologies
         </div>
 <div class="service-tile">
-<img alt="Graphic Design" class="service-icon" src="Img/Icon/Outline/brush.png"/>
+<img alt="Graphic Design" class="service-icon" src="Img/Icon/brush.png"/>
           Graphic Design
         </div>
 <div class="service-tile">
-<img alt="Creative AI" class="service-icon" src="Img/Icon/Outline/message-square.png"/>
+<img alt="Creative AI" class="service-icon" src="Img/Icon/message-square.png"/>
           Creative AI
         </div>
 <div class="service-tile">
-<img alt="UI/UX" class="service-icon" src="Img/Icon/Outline/browser.png"/>
+<img alt="UI/UX" class="service-icon" src="Img/Icon/browser.png"/>
           UI/UX
         </div>
 <div class="service-tile">
-<img alt="Automation" class="service-icon" src="Img/Icon/Outline/clock.png"/>
+<img alt="Automation" class="service-icon" src="Img/Icon/clock.png"/>
           Automation
         </div>
 <div class="service-tile">
-<img alt="3D Design" class="service-icon" src="Img/Icon/Outline/cube.png"/>
+<img alt="3D Design" class="service-icon" src="Img/Icon/cube.png"/>
           3D Design
         </div>
 </div>
@@ -778,89 +778,89 @@
 <div class="services-wrapper-2">
 <div class="services-2">
 <div class="service-tile">
-<img alt="Design Strategy" class="service-icon" src="Img/Icon/Outline/keypad.png"/>
+<img alt="Design Strategy" class="service-icon" src="Img/Icon/keypad.png"/>
           Design Strategy
         </div>
 <div class="service-tile">
-<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/Outline/code.png"/>
+<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/code.png"/>
           Emerging Technologies
         </div>
 <div class="service-tile">
-<img alt="Graphic Design" class="service-icon" src="Img/Icon/Outline/brush.png"/>
+<img alt="Graphic Design" class="service-icon" src="Img/Icon/brush.png"/>
           Graphic Design
         </div>
 <div class="service-tile">
-<img alt="Creative AI" class="service-icon" src="Img/Icon/Outline/message-square.png"/>
+<img alt="Creative AI" class="service-icon" src="Img/Icon/message-square.png"/>
           Creative AI
         </div>
 <div class="service-tile">
-<img alt="UI/UX" class="service-icon" src="Img/Icon/Outline/browser.png"/>
+<img alt="UI/UX" class="service-icon" src="Img/Icon/browser.png"/>
           UI/UX
         </div>
 <div class="service-tile">
-<img alt="Automation" class="service-icon" src="Img/Icon/Outline/clock.png"/>
+<img alt="Automation" class="service-icon" src="Img/Icon/clock.png"/>
           Automation
         </div>
 <div class="service-tile">
-<img alt="3D Design" class="service-icon" src="Img/Icon/Outline/cube.png"/>
+<img alt="3D Design" class="service-icon" src="Img/Icon/cube.png"/>
           3D Design
         </div>
 <!-- Duplicated for seamless scroll loop -->
 <div class="service-tile">
-<img alt="Design Strategy" class="service-icon" src="Img/Icon/Outline/keypad.png"/>
+<img alt="Design Strategy" class="service-icon" src="Img/Icon/keypad.png"/>
           Design Strategy
         </div>
 <div class="service-tile">
-<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/Outline/code.png"/>
+<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/code.png"/>
           Emerging Technologies
         </div>
 <div class="service-tile">
-<img alt="Graphic Design" class="service-icon" src="Img/Icon/Outline/brush.png"/>
+<img alt="Graphic Design" class="service-icon" src="Img/Icon/brush.png"/>
           Graphic Design
         </div>
 <div class="service-tile">
-<img alt="Creative AI" class="service-icon" src="Img/Icon/Outline/message-square.png"/>
+<img alt="Creative AI" class="service-icon" src="Img/Icon/message-square.png"/>
           Creative AI
         </div>
 <div class="service-tile">
-<img alt="UI/UX" class="service-icon" src="Img/Icon/Outline/browser.png"/>
+<img alt="UI/UX" class="service-icon" src="Img/Icon/browser.png"/>
           UI/UX
         </div>
 <div class="service-tile">
-<img alt="Automation" class="service-icon" src="Img/Icon/Outline/clock.png"/>
+<img alt="Automation" class="service-icon" src="Img/Icon/clock.png"/>
           Automation
         </div>
 <div class="service-tile">
-<img alt="3D Design" class="service-icon" src="Img/Icon/Outline/cube.png"/>
+<img alt="3D Design" class="service-icon" src="Img/Icon/cube.png"/>
           3D Design
         </div>
 <!-- Extra duplication for seamless scroll loop -->
 <div class="service-tile">
-<img alt="Design Strategy" class="service-icon" src="Img/Icon/Outline/keypad.png"/>
+<img alt="Design Strategy" class="service-icon" src="Img/Icon/keypad.png"/>
           Design Strategy
         </div>
 <div class="service-tile">
-<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/Outline/code.png"/>
+<img alt="Emerging Technologies" class="service-icon" src="Img/Icon/code.png"/>
           Emerging Technologies
         </div>
 <div class="service-tile">
-<img alt="Graphic Design" class="service-icon" src="Img/Icon/Outline/brush.png"/>
+<img alt="Graphic Design" class="service-icon" src="Img/Icon/brush.png"/>
           Graphic Design
         </div>
 <div class="service-tile">
-<img alt="Creative AI" class="service-icon" src="Img/Icon/Outline/message-square.png"/>
+<img alt="Creative AI" class="service-icon" src="Img/Icon/message-square.png"/>
           Creative AI
         </div>
 <div class="service-tile">
-<img alt="UI/UX" class="service-icon" src="Img/Icon/Outline/browser.png"/>
+<img alt="UI/UX" class="service-icon" src="Img/Icon/browser.png"/>
           UI/UX
         </div>
 <div class="service-tile">
-<img alt="Automation" class="service-icon" src="Img/Icon/Outline/clock.png"/>
+<img alt="Automation" class="service-icon" src="Img/Icon/clock.png"/>
           Automation
         </div>
 <div class="service-tile">
-<img alt="3D Design" class="service-icon" src="Img/Icon/Outline/cube.png"/>
+<img alt="3D Design" class="service-icon" src="Img/Icon/cube.png"/>
           3D Design
         </div>
 </div>
