--- a/FnT.html
+++ b/FnT.html
@@ -350,7 +350,7 @@
       z-index: 1000;
     ">
     <a href="index.html" class="logo-box">
-      <img src="./Img/logo.png" alt="Logo" style="height: 20px;" />
+      <img src="Img/logo.png" alt="Logo" style="height: 20px;" />
     </a>
     <div style="display: flex; align-items: center; gap: 40px; margin-left: auto;">
       <div class="links">
@@ -362,7 +362,7 @@
     </div>
   </nav>
 
-  <img src="./Img/FnT/head img.png" alt="Stayfree" class="hero-img" />
+  <img src="Img/FnT/head img.png" alt="Stayfree" class="hero-img" />
 
   <div class="container">
     <h1 class="title">Landing Page Desgin</h1>
@@ -397,8 +397,8 @@
     <div class="image-layout">
       
       <div class="image-row">
-        <img src="./Img/FnT/portfolio-britannia 1x1-1.png" alt="Scene 2" class="image-small-1" />
-        <img src="./Img/FnT/portfolio-britannia 1x1-2.png" alt="Scene 3" class="image-small-1" />
+        <img src="Img/FnT/portfolio-britannia 1x1-1.png" alt="Scene 2" class="image-small-1" />
+        <img src="Img/FnT/portfolio-britannia 1x1-2.png" alt="Scene 3" class="image-small-1" />
       </div>
     </div>
 
@@ -419,7 +419,7 @@
         <a href="dyson.html">
           <div class="portfolio-item">
             <div class="portfolio-img-box">
-              <img src="./Img/portfolio-dyson.jpg" alt="Coke Studio" />
+              <img src="Img/portfolio-dyson.jpg" alt="Coke Studio" />
             </div>
             <div style="padding: 12px 0 0;">
               <div style="display: flex; align-items: center; gap: 8px;">
@@ -437,7 +437,7 @@
         <a href="maggi-quick-comm.html">
           <div class="portfolio-item">
             <div class="portfolio-img-box">
-              <img src="./Img/portfolio-maggi.jpg" alt="Dyson" />
+              <img src="Img/portfolio-maggi.jpg" alt="Dyson" />
             </div>
             <div style="padding: 12px 0 0;">
               <div style="display: flex; align-items: center; gap: 8px;">
