--- a/stay.html
+++ b/stay.html
@@ -341,7 +341,7 @@
       z-index: 1000;
     ">
     <a href="index.html" class="logo-box">
-      <img src="./Img/logo.png" alt="Logo" style="height: 20px;" />
+      <img src="Img/logo.png" alt="Logo" style="height: 20px;" />
     </a>
     <div style="display: flex; align-items: center; gap: 40px; margin-left: auto;">
       <div class="links">
@@ -353,7 +353,7 @@
     </div>
   </nav>
 
-  <img src="./Img/Stayfree/head img.png" alt="Stayfree" class="hero-img" />
+  <img src="Img/Stayfree/head img.png" alt="Stayfree" class="hero-img" />
 
   <div class="container">
     <h1 class="title">A+ content Stayfree</h1>
@@ -386,10 +386,10 @@
     </div>
 
     <div class="image-layout">
-      <img src="./Img/Stayfree/portfolio-britannia.png" alt="Scene 1" class="image-large" />
+      <img src="Img/Stayfree/portfolio-britannia.png" alt="Scene 1" class="image-large" />
       <div class="image-row">
-        <img src="./Img/Stayfree/portfolio-britannia 1x1-1.png" alt="Scene 2" class="image-small" />
-        <img src="./Img/Stayfree/portfolio-britannia 1x1-2.png" alt="Scene 3" class="image-small" />
+        <img src="Img/Stayfree/portfolio-britannia 1x1-1.png" alt="Scene 2" class="image-small" />
+        <img src="Img/Stayfree/portfolio-britannia 1x1-2.png" alt="Scene 3" class="image-small" />
       </div>
     </div>
 
@@ -408,7 +408,7 @@
         <a href="dyson.html">
           <div class="portfolio-item">
             <div class="portfolio-img-box">
-              <img src="./Img/portfolio-dyson.jpg" alt="Coke Studio" />
+              <img src="Img/portfolio-dyson.jpg" alt="Coke Studio" />
             </div>
             <div style="padding: 12px 0 0;">
               <div style="display: flex; align-items: center; gap: 8px;">
@@ -426,7 +426,7 @@
         <a href="maggi-quick-comm.html">
           <div class="portfolio-item">
             <div class="portfolio-img-box">
-              <img src="./Img/portfolio-maggi.jpg" alt="Dyson" />
+              <img src="Img/portfolio-maggi.jpg" alt="Dyson" />
             </div>
             <div style="padding: 12px 0 0;">
               <div style="display: flex; align-items: center; gap: 8px;">
