--- a/stay.html
+++ b/stay.html
@@ -405,38 +405,38 @@
       <div class="portfolio-underline"></div>
 
       <div class="portfolio-grid">
-        <a href="dyson.html">
+        <a href="FnT.html">
           <div class="portfolio-item">
             <div class="portfolio-img-box">
-              <img src="Img/portfolio-dyson.jpg" alt="Coke Studio" />
+              <img src="Img/portfolio-landing.png" alt="Landing" />
             </div>
             <div style="padding: 12px 0 0;">
               <div style="display: flex; align-items: center; gap: 8px;">
                 <div style="width: 12px; height: 12px; background: #FF2D2D; border-radius: 2px;"></div>
-                <span style="font-weight: 600;">Dyson</span>
+                <span style="font-weight: 600;">Landing Page</span>
               </div>
-              <div style="font-size: 14px; color: #888; margin-top: 4px;">2023</div>
+              <div style="font-size: 14px; color: #888; margin-top: 4px;">2022</div>
               <div style="display: flex; justify-content: flex-end; gap: 8px; margin-top: 8px;">
-                <span class="service-tag">AI</span>
-                <span class="service-tag">Concept</span>
+                <span class="service-tag">UI/UX</span>
+                <span class="service-tag">Landing Page</span>
               </div>
             </div>
           </div>
         </a>
-        <a href="maggi-quick-comm.html">
+        <a href="coke-studio.html">
           <div class="portfolio-item">
             <div class="portfolio-img-box">
-              <img src="Img/portfolio-maggi.jpg" alt="Dyson" />
+              <img src="Img/portfolio-coke.jpg" alt="Coke Studio" />
             </div>
             <div style="padding: 12px 0 0;">
               <div style="display: flex; align-items: center; gap: 8px;">
                 <div style="width: 12px; height: 12px; background: #FF2D2D; border-radius: 2px;"></div>
-                <span style="font-weight: 600;">Maggi Ecom</span>
+                <span style="font-weight: 600;">Coke Studio</span>
               </div>
-              <div style="font-size: 14px; color: #888; margin-top: 4px;">2024-25</div>
+              <div style="font-size: 14px; color: #888; margin-top: 4px;">2023</div>
               <div style="display: flex; justify-content: flex-end; gap: 8px; margin-top: 8px;">
-                <span class="service-tag">AI</span>
-                <span class="service-tag">Digital Production</span>
+                <span class="service-tag">AR</span>
+                <span class="service-tag">Emerging Tech</span>
               </div>
             </div>
           </div>
