--- a/stay.html
+++ b/stay.html
@@ -415,7 +415,7 @@
                 <div style="width: 12px; height: 12px; background: #FF2D2D; border-radius: 2px;"></div>
                 <span style="font-weight: 600;">Landing Page</span>
               </div>
-              <div style="font-size: 14px; color: #888; margin-top: 4px;">2022</div>
+              <div style="font-size: 14px; color: #888; margin-top: 4px;"></div>
               <div style="display: flex; justify-content: flex-end; gap: 8px; margin-top: 8px;">
                 <span class="service-tag">UI/UX</span>
                 <span class="service-tag">Landing Page</span>
@@ -433,7 +433,7 @@
                 <div style="width: 12px; height: 12px; background: #FF2D2D; border-radius: 2px;"></div>
                 <span style="font-weight: 600;">Coke Studio</span>
               </div>
-              <div style="font-size: 14px; color: #888; margin-top: 4px;">2023</div>
+              <div style="font-size: 14px; color: #888; margin-top: 4px;"></div>
               <div style="display: flex; justify-content: flex-end; gap: 8px; margin-top: 8px;">
                 <span class="service-tag">AR</span>
                 <span class="service-tag">Emerging Tech</span>
