--- a/maggi-quick-comm.html
+++ b/maggi-quick-comm.html
@@ -353,7 +353,7 @@
     </div>
   </nav>
 
-  <img src="./Img/portfolio-maggi.jpg" alt="Maggi Hero" class="hero-img" />
+  <img src="./Img/Maggi/head img" alt="Maggi Hero" class="hero-img" />
 
   <div class="container">
     <h1 class="title">Maggi Quick Comm</h1>
