--- a/maggi-quick-comm.html
+++ b/maggi-quick-comm.html
@@ -341,7 +341,7 @@
       z-index: 1000;
     ">
     <a href="index.html" class="logo-box">
-      <img src="./Img/logo.png" alt="Logo" style="height: 20px;" />
+      <img src="Img/logo.png" alt="Logo" style="height: 20px;" />
     </a>
     <div style="display: flex; align-items: center; gap: 40px; margin-left: auto;">
       <div class="links">
@@ -353,7 +353,7 @@
     </div>
   </nav>
 
-  <img src="./Img/Maggi/head img" alt="Maggi Hero" class="hero-img" />
+  <img src="Img/Maggi/head img" alt="Maggi Hero" class="hero-img" />
 
   <div class="container">
     <h1 class="title">Maggi Quick Comm</h1>
@@ -386,10 +386,10 @@
     </div>
 
     <div class="image-layout">
-      <img src="./Img/maggi1.jpg" alt="Scene 1" class="image-large" />
+      <img src="Img/maggi1.jpg" alt="Scene 1" class="image-large" />
       <div class="image-row">
-        <img src="./Img/maggi2.jpg" alt="Scene 2" class="image-small" />
-        <img src="./Img/maggi3.jpg" alt="Scene 3" class="image-small" />
+        <img src="Img/maggi2.jpg" alt="Scene 2" class="image-small" />
+        <img src="Img/maggi3.jpg" alt="Scene 3" class="image-small" />
       </div>
     </div>
 
@@ -410,7 +410,7 @@
         <a href="x-brand.html">
           <div class="portfolio-item">
             <div class="portfolio-img-box">
-              <img src="./Img/x.jpg" alt="Coke Studio" />
+              <img src="Img/x.jpg" alt="Coke Studio" />
             </div>
             <div style="padding: 12px 0 0;">
               <div style="display: flex; align-items: center; gap: 8px;">
@@ -428,7 +428,7 @@
         <a href="y-brand.html">
           <div class="portfolio-item">
             <div class="portfolio-img-box">
-              <img src="./Img/portfolio-britannia.jpg" alt="Dyson" />
+              <img src="Img/portfolio-britannia.jpg" alt="Dyson" />
             </div>
             <div style="padding: 12px 0 0;">
               <div style="display: flex; align-items: center; gap: 8px;">
