--- a/maggi-quick-comm.html
+++ b/maggi-quick-comm.html
@@ -353,7 +353,7 @@
     </div>
   </nav>
 
-  <img src="Img/Maggi/head img" alt="Maggi Hero" class="hero-img" />
+  <img src="Img/Maggi/head img.png" alt="Maggi Hero" class="hero-img" />
 
   <div class="container">
     <h1 class="title">Maggi Quick Comm</h1>
@@ -386,10 +386,10 @@
     </div>
 
     <div class="image-layout">
-      <img src="Img/maggi1.jpg" alt="Scene 1" class="image-large" />
+      <img src="Img/Maggi/maggi1.png" alt="Scene 1" class="image-large" />
       <div class="image-row">
-        <img src="Img/maggi2.jpg" alt="Scene 2" class="image-small" />
-        <img src="Img/maggi3.jpg" alt="Scene 3" class="image-small" />
+        <img src="Img/Maggi/maggi2.png" alt="Scene 2" class="image-small" />
+        <img src="Img/Maggi/maggi3.png" alt="Scene 3" class="image-small" />
       </div>
     </div>
 
