--- a/maggi-quick-comm.html
+++ b/maggi-quick-comm.html
@@ -377,7 +377,7 @@
       <div style="flex: 1;">
         <h2 class="section-title">Overview</h2>
         <p class="description">
-          A short overview of the Maggi campaign goes here. Highlight creative direction, goals, and technology used like AI.
+          This project focused on creating quick, quirky ad creatives for Maggi Noodles across e-commerce and quick-commerce platforms. The goal was to deliver simple, eye-catching visuals that shoppers could understand in a split second—prompting them to crave and order Maggi instantly.
         </p>
       </div>
       <div class="cta">
@@ -386,9 +386,9 @@
     </div>
 
     <div class="image-layout">
-      <img src="Img/Maggi/maggi1.png" alt="Scene 1" class="image-large" />
+      <img src="Img/Maggi/maggi2.png" alt="Scene 1" class="image-large" />
       <div class="image-row">
-        <img src="Img/Maggi/maggi2.png" alt="Scene 2" class="image-small" />
+        <img src="Img/Maggi/maggi1.png" alt="Scene 2" class="image-small" />
         <img src="Img/Maggi/maggi3.png" alt="Scene 3" class="image-small" />
       </div>
     </div>
@@ -396,7 +396,7 @@
     <div class="center-section">
       <h2 class="section-title">What it's about?</h2>
       <p class="description" style="margin: 0 auto; max-width: 700px;">
-        A deeper explanation of the creative process, emotional impact, team collaboration, or storytelling. Use this to show how you think and work.
+        Inspired by traditional banner designs, the creatives were enhanced with Gen AI to produce high-contrast food visuals and playful modifications. AI-generated elements gave the ads a fresh, modern edge while keeping the messaging clear and appetizing, making each piece instantly appealing and purchase-driven.
       </p>
     </div>
 
